--- a/FrontEnd/User Cycle/check-out.html
+++ b/FrontEnd/User Cycle/check-out.html
@@ -263,96 +263,42 @@
         <div class="checkout__area section-py-120">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="coupon__code-wrap">
-                            <div class="coupon__code-info">
-                                <span><i class="far fa-bookmark"></i> Have a coupon?</span>
-                                <a href="#" id="coupon-element">Click here to enter your code</a>
-                            </div>
-                            <form action="#" class="coupon__code-form">
-                                <p>If you have a coupon code, please apply it below.</p>
-                                <input type="text" placeholder="Coupon code">
-                                <button type="submit" class="btn">Apply coupon</button>
-                            </form>
-                        </div>
-                    </div>
+                  
                     <div class="col-lg-7">
                         <form action="#" class="customer__form-wrap">
-                            <span class="title">Billing Details</span>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-grp">
-                                        <label for="first-name">First name *</label>
-                                        <input type="text" id="first-name">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-grp">
-                                        <label for="last-name">Last name *</label>
-                                        <input type="text" id="last-name">
-                                    </div>
-                                </div>
+                            <span class="title">Payment Details</span>
+                            <div class="form-grp">
+                                <label for="cardholderName">Cardholder Name</label>
+                                <input id="cardholderName" type="text" placeholder="John Doe">
                             </div>
                             <div class="form-grp">
-                                <label for="company-name">Company name (optional)</label>
-                                <input type="text" id="company-name">
-                            </div>
-                            <div class="form-grp select-grp">
-                                <label for="country-name">Country / Region *</label>
-                                <select id="country-name" name="country-name" class="country-name">
-                                    <option value="United Kingdom (UK)">United Kingdom (UK)</option>
-                                    <option value="United States (US)">United States (US)</option>
-                                    <option value="Turkey">Turkey</option>
-                                    <option value="Saudi Arabia">Saudi Arabia</option>
-                                    <option value="Portugal">Portugal</option>
-                                </select>
-                            </div>
-                            <div class="form-grp">
-                                <label for="street-address">Street address *</label>
-                                <input type="text" id="street-address" placeholder="House number and street name">
-                            </div>
-                            <div class="form-grp">
-                                <input type="text" id="street-address-two" placeholder="Apartment, suite, unit, etc. (optional)">
-                            </div>
-                            <div class="form-grp">
-                                <label for="town-name">Town / City *</label>
-                                <input type="text" id="town-name">
-                            </div>
-                            <div class="form-grp select-grp">
-                                <label for="district-name">District *</label>
-                                <select id="district-name" name="district-name" class="district-name">
-                                    <option value="Alabama">Alabama</option>
-                                    <option value="Alaska">Alaska</option>
-                                    <option value="Arizona">Arizona</option>
-                                    <option value="California">California</option>
-                                    <option value="New York">New York</option>
-                                </select>
-                            </div>
-                            <div class="form-grp">
-                                <label for="zip-code">ZIP Code *</label>
-                                <input type="text" id="zip-code">
+                                <label for="cardNumber">Card Number</label>
+                                <input id="cardNumber" type="text" placeholder="XXXX XXXX XXXX XXXX">
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-grp">
-                                        <label for="phone">Phone *</label>
-                                        <input type="number" id="phone">
+                                        <label for="expirationDate">Expiration Date</label>
+                                        <input id="expirationDate" type="text" placeholder="MM/YY">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-grp">
-                                        <label for="email">Email address *</label>
-                                        <input type="email" id="email">
+                                        <label for="cvv">CVV</label>
+                                        <input id="cvv" type="password" placeholder="***">
                                     </div>
                                 </div>
                             </div>
-                            <span class="title title-two">Additional Information</span>
-                            <div class="form-grp">
-                                <label for="note">Order notes (optional)</label>
-                                <textarea id="note" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                            <div class="form-check mb-3">
+                                <input type="checkbox" class="form-check-input" id="isDefault">
+                                <label class="form-check-label" for="isDefault">Set as default payment method</label>
+                            </div>
+                            <div class="submit-btn mt-25">
+                                <button type="submit" class="btn" onclick="">Save Payment Method</button>
                             </div>
                         </form>
                     </div>
+                    
                     <div class="col-lg-5">
                         <div class="order__info-wrap">
                             <h2 class="title">YOUR ORDER</h2>
